# Helios

./: .gitignore  env.example  pyproject.toml  schema_cache.json
docs/: commit_convention.md  extractor_spec.md  failure_format.md  prompt.md  rules_spec.md  splitting_spec.md
helios/: __init__.py  binder.py  cli.py  convert.py  extractor.py  llm.py  rules.py  schema_resolver.py  splitter.py
